# drf-auth

./: db.sqlite3  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
pages_app/: models.py  permissions.py  serializer.py  urls.py  views.py
pages_app/migrations/: 0001_initial.py
website_project/: asgi.py  settings.py  urls.py  wsgi.py
